Fix all asset paths

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#667eea">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/focus-timer/manifest.json">
 
     <!-- iOS Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Pomodoro">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/focus-timer/apple-touch-icon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/focus-timer/index.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="/focus-timer/app.js"></script>
 </body>
 
 </html>
